# BigDataFrameworkSpark

./: .gitignore  LICENSE  README.md  classes_DKOps.dot  databricks.yml  demoApp.py  dependencies  example.py  example_vuelos.py  mkdocs.yml  packages_DKOps.dot  pyproject.toml  template_1.ipynb  test.py  vuelos.json
DKOps/: demoApp.py  example.py  launcher.py
Framework_medallion/config/: DEVELOP.ipynb  config_loader.py  environment_manager.py
config/: bundle.yml  config-copy.json  config.json
config/environments/: dev.yml  prd.yml
docs/: index.md
docs/api/: environment_config.md  launcher.md  logger_config.md
docs/api/contracts/: loader.md  validator.md
docs/api/migrations/: safe_migrator.md
docs/api/writers/: append.md  base.md  create.md  delete.md  partition.md  upsert.md
docs/guide/: contracts.md  migrations.md  quickstart.md  writers.md
site/: 404.html
sql_output/: ${bundle.targets.dev.catalog}__aeronautica__vuelos_raw.sql
src/DKOps/: environment_config.py  launcher.py  logger_config.py
src/DKOps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/DKOps/DKOps.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/DKOps/table_governance/: __init__.py
src/DKOps/table_governance/contracts/: loader.py  validator.py
src/DKOps/table_governance/migrations/: safe_migrator.py
src/DKOps/table_governance/writers/: __init__.py  append_writer.py  base_writer.py  create_writer.py  delete_writer.py  partition_writer.py  upsert_writer.py
src/DKOps/table_manager/: __init__.py  table_definition.py  table_manager.py  table_variable_resolver.py
tests/: test_luncher.py  test_table_manager.py
