[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DKOps"
version = "0.1.0"
description = "Lakehouse automation framework for DataOps, DevOps, QA, and Medallion architecture on Databricks"
readme = "README.md"
authors = [
    { name = "Roberto" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0",
    "loguru",
]

[project.optional-dependencies]
databricks = [
    "databricks-connect>=13.0",
]
local = [
    "pyspark>=3.4.0",
    "delta-spark>=2.4.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/brrsanchezfi/BigDataFrameworkSpark"
Documentation = "https://github.com/brrsanchezfi/BigDataFrameworkSpark"
Repository = "https://github.com/brrsanchezfi/BigDataFrameworkSpark"

[tool.setuptools]
package-dir = {"" = "src/"}

[tool.setuptools.packages.find]
where = ["src/"]


# 🔧 Configuración de herramientas

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true